Made a buncho spacing fixes
LOOK AWAY INDY

--- a/_sass/_abstracts/_fonts.scss
+++ b/_sass/_abstracts/_fonts.scss
@@ -72,7 +72,7 @@ h4, li, .button-small {
 
 h5, label {
   font-weight: 700;
-  font-size: clamp(.6rem, calc(1vw + .2rem), .75rem);
+  font-size: clamp(.65rem, calc(1vw + .2rem), .75rem);
   line-height: 1.4em;
   text-transform: uppercase;
   letter-spacing:3px;
